--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "framer-motion": "^10.18.0",
-    "next": "16.0.10",
+    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
