--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@supabase/supabase-js": "^2.89.0",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "framer-motion": "^10.18.0",
+    "lightweight-charts": "^3.7.0",
     "next": "^14.2.5",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
@@ -21,5 +26,9 @@
   },
   "engines": {
     "node": ">=18.17.0"
+  },
+  "devDependencies": {
+    "@types/react": "19.2.7",
+    "typescript": "5.9.3"
   }
 }
