--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "framer-motion": "^10.18.0",
+    "jsonwebtoken": "^9.0.3",
     "lightweight-charts": "^3.7.0",
     "next": "^14.2.5",
     "next-themes": "^0.4.6",
